MB-35096: Check received seqnoAck <= highest sent item

A replica will unconditionally ack at the end of a disk snapshot to
account for possible deduped prepares. The active may therefore receive
seqnoAcks for seqnos higher than the highest tracked prepare seqno.

Make the ActiveDM silently permit seqnoAcks for seqnos later than any
trackedWrites, but instead make `DcpProducer::seqno_acknowledged`
ensure all received seqnoAcks are less than the highest seqno sent.

Change-Id: I45924d6fa472d516f35e327a68fee7fe9ed9c5d1
Reviewed-on: http://review.couchbase.org/112053
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>